# LibSuperpixels

./: CMakeLists.txt  README.md  README.md~  superpixel.cpp  superpixel.h
include/: global.h  global.h~
include/egbis/: egbis.cpp  egbis.h  segment-image.h
include/libsuperpixel/: superpixel.cpp  superpixel.h
include/slic_modified/: slic.cpp  slic.h
test/: test_egbis_superpixel_segmentation.cpp  test_histogram_superpixel_comparison.cpp  test_horizon_search.cpp~  test_prob_floor_prior.cpp~  test_slic_superpixel_segmentation.cpp
